refactor(llm): 重构 LLM 扩展和历史消息管理
- 优化了 LLM历史消息管理逻辑，移除了不必要的 ObjectMapper
- 重构了 BaseLLMExtension 中的工具调用处理流程
- 改进了日志输出，使用环境名称替代固定前缀
- 优化了代码结构，提高了可维护性和可读性